z-index fix so Facebox floats above the main nav

--- a/app/assets/stylesheets/facebox.css.scss
+++ b/app/assets/stylesheets/facebox.css.scss
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 300;
   text-align: left;
 
   .popup{
